add menu and JS for video // need to test this for mobile

--- a/src/html/sections/_header.html
+++ b/src/html/sections/_header.html
@@ -146,7 +146,8 @@
                                         <li><a href="#">Противодействие коррупции</a></li>
                                         <li><a href="#">Ветеранская организация</a></li>
                                         <li><a href="#">ФУМО СПО "Социология и социальная работа" (39.00.00)</a></li>
-                                        <li><a href="#">ФУМО СПО "Средства массовой информации и информационно-библиотечное дело" (42.00.00)</a></li>
+                                        <li><a href="#">ФУМО СПО "Средства массовой информации и
+                                                информационно-библиотечное дело" (42.00.00)</a></li>
                                         <li><a href="#">Профессиональные стандарты</a></li>
                                     </ul>
                                 </li>
@@ -329,7 +330,8 @@
                         <li><a class="active" href="#">Трудоустройство</a>
                             <ul>
                                 <li><a href="#">Советы по трудоустройству</a></li>
-                                <li><a href="#">Содействие трудоустройству студентов и выпускников с ОВЗ и инвалидностью</a></li>
+                                <li><a href="#">Содействие трудоустройству студентов и выпускников с ОВЗ и
+                                        инвалидностью</a></li>
                                 <li><a href="#">Вакансии и стажировки</a></li>
                                 <li><a href="#">Волонтерский центр РГСУ для иностранных студентов</a></li>
                                 <li><a href="#">Брендированные аудитории</a></li>
@@ -340,12 +342,20 @@
                             <a class="active" href="#">Сведения об образовательной организации</a>
                             <ul>
                                 <li><a href="#">Основные сведения</a></li>
-                                <li><a href="#">Структура и органы управления образовательной организацией</a></li>
+                                <li><a class="active" href="#">Структура и органы управления образовательной организацией</a>
+                                    <ul>
+                                        <li><a href="#">Научно-методический совет РГСУ</a></li>
+                                        <li><a href="#">Кадровый комитет РГСУ</a></li>
+                                        <li><a href="#">Студенческий совет РГСУ</a></li>
+                                        <li><a href="#">Жилищно-бытовая комиссия РГСУ</a></li>
+                                    </ul>
+                                </li>
                                 <li><a href="#">Документы</a></li>
                                 <li><a href="#">Образование</a></li>
                                 <li><a href="#">Образовательные стандарты</a></li>
                                 <li><a href="#">Руководство. Педагогический(научно-педагогический) состав</a></li>
-                                <li><a href="#">Материально-техническое обеспечение и оснащенность образовательного процесса</a></li>
+                                <li><a href="#">Материально-техническое обеспечение и оснащенность образовательного
+                                        процесса</a></li>
                                 <li><a href="#">Стипендии и иные виды материальной поддержки</a></li>
                                 <li><a href="#">Платные образовательные услуги</a></li>
                                 <li><a href="#">Финансово-хозяйственная деятельность</a></li>
@@ -354,7 +364,14 @@
                                 <li><a href="#">Международное сотрудничество</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Медиацентр</a></li>
+                        <li><a class="active" href="#">Медиацентр</a>
+                            <ul>
+                                <li><a href="#">Информационная лента</a></li>
+                                <li><a href="#">Анонсы</a></li>
+                                <li><a href="#">Видеолента</a></li>
+                                <li><a href="#">Брендбук РГСУ</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </nav>
