--- a/src/html/sections/_main.html
+++ b/src/html/sections/_main.html
@@ -8,7 +8,14 @@
                     <source src="https://rgsu.net/netcat_files/2700/4629/video2.webm" type="video/webm">
                 </video>
                 <button class="page-main__video-control page-main__video-control--play"></button>
+
             </div>
+            <ul class="page-main__links">
+                <li class="page-main__links-item"><a class="page-main__links-link page-main__links-link--first" href="#"
+                        target="_blank">Поступай онлайн</a></li>
+                <li class="page-main__links-item"><a class="page-main__links-link page-main__links-link--second"
+                        href="#" target="_blank">Второе высшее для абитуриентов</a></li>
+            </ul>
         </div>
     </div>
 </main>
