add video for webkit playsinline

--- a/src/html/sections/_main.html
+++ b/src/html/sections/_main.html
@@ -3,7 +3,7 @@
         <div class="page-main__video">
             <div class="page-main__video-wrapper">
                 <video class="page-main__video-item paused" width="100%" loop="loop" autoplay="autoplay" preload="auto"
-                    muted="">
+                    muted="" playsinline webkit-playsinline>
                     <source src="https://rgsu.net/netcat_files/2700/4629/video2.mp4" type="video/mp4">
                     <source src="https://rgsu.net/netcat_files/2700/4629/video2.webm" type="video/webm">
                 </video>
