--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
 <body>
     @@include('sections/_header.html')
     @@include('sections/_main.html')
+    @@include('sections/_news.html')
     @@include('sections/_footer.html')
     <script type="module" src="js/script.min.js"></script>
 </body>
